[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kettu"
version = "0.1"
authors = [
    {name = "Souheil Chelfouh", email = "trollfot@gmail.com"},
]
requires-python = ">=3.10"
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
  "autoroutes",
  "chameleon",
  "frozendict",
  "orjson",
  "prejudice",
  "dishka >= 1.7",
  "wrapt",
  "itsdangerous",
  "http_session",
  "langcodes",
  "autorouting",
  "plum-dispatch",
  "pyhamcrest",
  "biscuits >= 0.3.0",
  "multidict >= 5.1",
  "multifruits >= 0.1.5",
  "orderedsets",
]

[project.optional-dependencies]
test = [
    'pytest',
    'webtest'
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["kettu"]
namespaces = false
