[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kettu"
version = "0.1"
authors = [
    {name = "Souheil Chelfouh", email = "trollfot@gmail.com"},
]
requires-python = ">=3.10"
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
  "autoroutes",
  "autorouting",
  "biscuits >= 0.3.0",
  "chameleon",
  "dishka >= 1.7",
  "frozendict",
  "http_session",
  "itsdangerous",
  "jsonschema_rs",
  "langcodes",
  "multidict >= 5.1",
  "multifruits >= 0.1.5",
  "orderedsets",
  "orjson",
  "plum-dispatch",
  "prejudice",
  "pyhamcrest",
  "wrapt",
]

[project.optional-dependencies]
test = [
    'pytest',
    'webtest'
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["kettu"]
namespaces = false
