[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kettu"
version = "0.1"
authors = [
    {name = "Souheil Chelfouh", email = "trollfot@gmail.com"},
]
requires-python = ">=3.10"
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
  "biscuits >= 0.3.0",
  "frozendict",
  "langcodes",
  "multifruits >= 0.1.5",
  "orjson",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pyhamcrest",
    "webtest",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["kettu"]
namespaces = false
